typescript/checker/tests/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration4_es6.ts.stderr
error: Unexpected token Some(LParen)
 --> $DIR/tests/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration4_es6.ts:3:5
  |
3 |    *() { }
  |     ^

